--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mui-app",
   "version": "0.1.0",
-  "homepage": "https://nawazdanish1996.github.io/Learning-Material-UI",
+  "homepage": "https://nawazdanish1996.github.io/Learnt-Material-UI",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
